k8s/04-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scratchy-api
  namespace: scratchy-ns
spec:
  minReadySeconds: 5
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: scratchy-api-label
  template:
    metadata:
      labels:
        app: scratchy-api-label
    spec:
      restartPolicy: Always
      containers:
        - name: scratchy-api
          image: "jasonraimondi/scratchy-api:latest"
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              path: /healthcheck
              port: 3001
            initialDelaySeconds: 0
            periodSeconds: 1
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3001
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 12
