k8s/04-api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: scratchy-api
  namespace: scratchy-ns
spec:
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: scratchy-api-label
